bookface_light.css
/*
	Name	   : Bookface Light
	Version    : 1.8.1
    Licence    : AGPL
    Created on : 12 JULY 2025
    Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
*/

:root {
	/* Fonts and Colors */
    --global-font-family: "Open Sans", Arial, sans-serif, Noto Color Emoji;
    --nav-bg: $nav_bg;
    --link-color: $link_color;
    --nav-icon-color: $nav_icon_color;
    --background-color: $background_color;
    --content-bg: var(--nav-bg);
    --comment-bg: var(--background-color);
    --font-color: $font_color;
    --font-color-lighter: $font_color_lighter; 
    --font-color-darker: $font_color_darker;
    --menu-background-hover-color: $menu_background_hover_color;
    --border-color: #eeeeee;
    --count-color:  #ffffff;
    --count-bg: var(--link-color);
    --shadowglow: rgba(0,0,0,.3);	
    --dimbright:  rgba(0,0,0,.1);	
    
    /* Theme Features */
	--attach-file-button: none; /* none or block */
	--show-tooltips: block; /* none or block */ 
	--show-navbar-labels: none; /*none or block */ 
    
    /* LOCALIZE pseudo-element text below */
    --navbar-network-text: 'Network';
    --navbar-profile-text: 'Home';
    --navbar-community-text: 'News Feed';
    --navbar-messages-text: 'Messages';
    --navbar-calendar-text: 'Calendar';
    --navbar-contact-text: 'Friends';
    --navbar-notices-text: 'Notices';
    --sign-in-text: 'Sign-In';
    --compose-text: 'Compose';
    --new-note-text: 'New Note';
    --save-search-text: 'Save Search';
    --follow-tag-text: 'Follow Tag';
    --comment-button-text: 'Comment';
    --share-button-text: 'Share';
    --quote-button-text: 'Quote';
    --like-button-text: 'Like';
    --dislike-button-text: 'Dislike';
    --more-button-text: 'More';
    --attendyes-button-text: 'Going';
    --attendno-button-text: 'Can\'t Go';
    --attendmaybe-button-text: 'Maybe';
    --add-photo-button-text: 'Add Photos';
    --follow-button-text: 'Follow';
    --save-button-text: 'Save';  
	--new-message-text: 'New Message';
	--calendar-today-text: 'Today';  
}

body {
       background-color: var(--background-color) !important;
       font-size: 15px !important;
       padding-top: 130px !important;
       font-family: var(--global-font-family);
	   color: var(--font-color); 
}
	body a {
		color: var(--font-color);
	}
	.tooltip {
		display: var(--show-tooltips) !important;
	}
	.btn-link, a.btn { 
		color: var(--link-color);
	}
	body a:hover,
  .btn:hover,
	.btn-link:hover, 
	body a:focus, 
  .btn:focus,
	.btn-link:focus, 
	body a:active, 
  .btn:active,
	.btn-link:active, 
	body a.active, 
	.btn-link.active {
		color: var(--link-color);
	} 
	.text-muted {
		color: var(--font-color-lighter);
	} 
#topbar-first .nav > li > a, 
#topbar-first .nav > li > button, 
nav.navbar .nav > li > a, 
nav.navbar .nav > li > button{
       color: var(--nav-icon-color) !important;
       background-color: transparent !important; 
       }
#topbar-first, nav.navbar {
       background-color: var(--nav-bg) !important;
       color: var(--nav-icon-color) !important;
       height: 55px;
}
       #topbar-first .topbar-nav .nav-segment {
              margin-right: 10px;
       }
       #topbar-first .nav > li > a:hover:not(.selected) {
              background-color: var(--dimbright) !important;
              border-radius: 8px !important;
       }
       .fa-lg {
              font-size: 24px !important;
       }
		/* Navbar Labels */ 
		#topbar-first .nav > li > a {
			text-align: center !important;
		}
		#topbar-first .topbar-nav .nav > li > a::after {
			font-size: 12px;
			display: var(--show-navbar-labels);
			margin-bottom: -15px;
		}
			#topbar-first .topbar-nav a[href="network"]::after {
				content: var(--navbar-network-text);
			}
			#topbar-first .topbar-nav a[href^="profile"]::after {
				content: var(--navbar-profile-text);
			}
			#topbar-first .topbar-nav a[href="community"]::after{
				content: var(--navbar-community-text);
			}
			#topbar-first .topbar-nav a[href="message"]::after{
				content: var(--navbar-messages-text);
			}
			#topbar-first .topbar-nav a[href="calendar"]::after{
				content: var(--navbar-calendar-text);
			}
			#topbar-first .topbar-nav a[href="contact"]::after{
				content: var(--navbar-contact-text);
			}
			#topbar-first .topbar-nav #nav-notifications-menu-btn::after{
				content: var(--navbar-notices-text);
				font-size: 12px;
				text-align: center;
				position: absolute;
				width: 100%;
				left: 50%;
				margin-left: -50%;
				display: var(--show-navbar-labels);
			}
			/* end navbar labels */  
#topbar-first .nav > li > a:hover, 
#topbar-first .nav > li > a:focus, 
#topbar-first .nav > li > button:not(#main-menu):hover, 
#topbar-first .nav > li > button:not(#main-menu):focus, 
#topbar-first button.navbar-toggle:hover,
#topbar-first button.navbar-toggle:focus, 
nav.navbar .nav > li > a:hover, 
nav.navbar .nav > li > a:focus, 
nav.navbar .nav > li > button:hover, 
nav.navbar .nav > li > button:focus {
	background-color: var(--dimbright) !important;
	border-radius: 8px !important;
       
}    
	#topbar-first button.navbar-toggle,
	#nav-notifications-menu-btn {
		width: 50px;
		height: 50px;
	}	
	#topbar-first .nav > li > a.selected,
	#nav-notification.dropdown.open {
		border-bottom: 3px solid var(--link-color) !important;
		color: var(--link-color) !important;
	}
#topbar-first .nav > li > a.selected:hover,
#topbar-first .nav > li > a.selected:focus,
#topbar-first .nav > li > #main-menu:hover,
#topbar-first .nav > li > #main-menu:focus,
#nav-notification.dropdown.open #nav-notifications-menu-btn:hover,
#nav-notification.dropdown.open #nav-notifications-menu-btn:focus {
       background-color: transparent !important;
       border-radius: 0 !important;
}
	#nav-notification.dropdown.open #nav-notifications-menu-btn .fa-bell::before {
		content: '\f0f3';
		color: var(--link-color);		
	}
	.notif-item img.notif-image,
	.intro-photo-wrapper img.intro-photo {
		border-radius: 100%;
	}
/* ... */

